--- a/about.html
+++ b/about.html
@@ -1,35 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Me</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
   <header>
     <div class="container">
-      <h1>About Me</h1>
+      <h1 class="logo">About Me</span></h1>
       <nav>
-        <ul>
+        <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html" class="active">About Me</a></li>
+          <li><a href="about.html" class="active">About</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <main class="container">
-    <section>
-      <h2>Hello! I'm [Your Name]</h2>
-      <p>I’m a passionate web developer currently learning HTML, CSS, and JavaScript. This blog is a space to document my journey and share my progress.</p>
-    </section>
+  <main class="container about-section">
+    <div class="about-text">
+      <h4 class="greeting">Hello, Welcome</h4>
+      <h2 class="name">I’m Mohamad Rafiq</h2>
+      <p class="bio">
+        I’m a student passionate about web design and creative development.
+        This website showcases my journey and projects as I grow my skills in design and development.
+      </p>
+      <a href="#contact" class="btn-yellow">Contact Me</a>
+    </div>
+    <div class="about-image">
+      <img src="images/profile.jpg" alt="Profile Photo" />
+    </div>
   </main>
 
   <footer>
-    <p>© 2025 My Personal Blog | Connect with me on GitHub</p>
+    <p>© 2025 Mohamad Rafiq Bin Roznan — Personal Portfolio</p>
   </footer>
 
-  <script src="js/main.js"></script>
 </body>
 </html>
