--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <nav>
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="about.html">About Me</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
       </nav>
     </div>
@@ -36,7 +36,7 @@
   </main>
 
   <footer>
-    <p>© 2025 My Personal Blog | Built with ❤️ and HTML/CSS</p>
+    <p>© 2025 Mohamad Rafiq Bin Roznan — Personal Portfolio</p>
   </footer>
 
   <script src="js/main.js"></script>
