--- a/about.html
+++ b/about.html
@@ -1,43 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Me</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About Me</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <header>
-    <div class="container">
-      <h1 class="logo">About Me</span></h1>
-      <nav>
-        <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html" class="active">About</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+    <header>
+        <div class="container">
+            <h1 class="logo">About<span style="color: #facc15;">Me.</span></h1>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html" class="active">About</a></li>
+                    <li><a href="my_works.html">My Works</a></li> </ul>
+            </nav>
+        </div>
+    </header>
 
-  <main class="container about-section">
-    <div class="about-text">
-      <h4 class="greeting">Hello, Welcome</h4>
-      <h2 class="name">I’m Mohamad Rafiq</h2>
-      <p class="bio">
-        I’m a student passionate about web design and creative development.
-        This website showcases my journey and projects as I grow my skills in design and development.
-      </p>
-      <a href="#contact" class="btn-yellow">Contact Me</a>
-    </div>
-    <div class="about-image">
-      <img src="images/profile.jpg" alt="Profile Photo" />
-    </div>
-  </main>
+    <main class="container about-section">
+        <div class="about-text">
+            <h4 class="greeting">Hello, Welcome</h4>
+            <h2 class="name">I’m Mohamad Rafiq</h2>
+            <p class="bio">
+                I’m a multimedia student with a passion for graphic design, 3D modeling, and interactive development using the Unity game engine. This website showcases my journey and creative projects as I continue to grow my skills across various digital media disciplines.
+            </p>
+            <div class="contact-number">
+                <a href="tel:+60199570527" class="phone-link">
+                    <img src="images/malaysia-flag.png" alt="Malaysian Flag" class="flag-icon">
+                    +60199570527
+                </a>
+            </div>
 
-  <footer>
-    <p>© 2025 Mohamad Rafiq Bin Roznan — Personal Portfolio</p>
-  </footer>
+            <div class="social-icons">
+                <a href="https://www.facebook.com/rafiq.roznan/" target="_blank" aria-label="Facebook Profile">
+                    <img src="images/facebook-icon.png" alt="Facebook" class="social-icon">
+                </a>
+                <a href="https://www.instagram.com/mrafiq.co_/?next=%2F" target="_blank" aria-label="Instagram Profile">
+                    <img src="images/instagram-icon.png" alt="Instagram" class="social-icon">
+                </a>
+                <a href="https://github.com/MRafiq0220" target="_blank" aria-label="Github Profile"> <img src="images/github-icon.png" alt="Github" class="social-icon">
+                </a>
+                <a href="mailto:rafiqroznan02@gmail.com" target="_blank" aria-label="Gmail Profile"> <img src="images/gmail-icon.png" alt="Gmail" class="social-icon">
+                </a>
+            </div>
+        </div>
+        <div class="about-image">
+            <img src="images/profile.jpg" alt="Profile Photo" />
+        </div>
+    </main>
+
+    <footer>
+        <p>© 2025 Mohamad Rafiq Bin Roznan — Personal Portfolio</p>
+    </footer>
 
 </body>
 </html>
