--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                 <ul class="nav-links">
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="my_works.html">My Works</a></li> </ul>
+                    <li><a href="my_works.html">My Works</a></li>
+                </ul>
             </nav>
         </div>
     </header>
@@ -30,27 +31,26 @@
             <h2>Recent Projects</h2>
             
             <div class="project-item">
-                <h3>Project Title 1: Interactive Unity Game</h3>
+                <h3>Project Title: ZooVRventure – An Immersive Virtual Zoo Experience</h3>
                 <p class="project-description">
-                    This project involved developing a small interactive game using the Unity game engine. It features custom 3D models and basic gameplay mechanics, demonstrating my skills in game design and interactive development.
+                    A final year project developed in Unity that lets users explore a realistic virtual zoo with 3D animal models and educational content, highlighting skills in VR and interactive design.
                 </p>
                 <div class="project-images">
-                    <img src="images/project1-img1.jpg" alt="Project 1 Screenshot 1">
-                    <img src="images/project1-img2.jpg" alt="Project 1 Screenshot 2">
-                    </div>
-                <a href="#" class="project-link">View Project Details</a>
+                    <img src="images/project1-img1.png" alt="Project 1 Screenshot 1">
+                    <img src="images/project1-img2.png" alt="Project 1 Screenshot 2">
+                </div>
+                <a href="#" class="project-link btn-blue">View Project Details</a>
             </div>
 
             <div class="project-item">
-                <h3>Project Title 2: Graphic Design Showcase</h3>
+                <h3>Project Title: 3D Character Modeling & Rigging – Mr. Apple</h3>
                 <p class="project-description">
-                    A collection of various graphic design works, including logos, posters, and digital illustrations. This project highlights my creativity and proficiency in design software like Adobe Photoshop and Illustrator.
-                </p>
+                    A stylized 3D character project featuring Mr. Apple, created in Blender. This includes modeling, texturing, and full-body rigging for animation. Highlights my skills in character design, rigging, and 3D workflow.
                 <div class="project-images">
-                    <img src="images/project2-img1.jpg" alt="Project 2 Design 1">
-                    <img src="images/project2-img2.jpg" alt="Project 2 Design 2">
-                    </div>
-                <a href="#" class="project-link">View Project Details</a>
+                    <img src="images/project2-img1.png" alt="Project 2 Design 1">
+                    <img src="images/project2-img2.png" alt="Project 2 Design 2">
+                </div>
+                <a href="#" class="project-link btn-blue">View Project Details</a>
             </div>
 
             </section>
