--- a/my_works.html
+++ b/my_works.html
@@ -21,60 +21,181 @@
         </div>
     </header>
 
-    <main class="container my-works-section">
-        <h2>Explore My Portfolio</h2>
-        <p class="section-description">
-            Here you'll find a comprehensive collection of my creative projects in graphic design, 3D modeling, and interactive development. Click on each project to see more details!
-        </p>
+    <main class="container">
+        <section class="intro">
+            <h2>Explore My Portfolio</h2>
+            <p>Here you'll find a comprehensive collection of my creative projects in graphic design, 3D modeling, and interactive development. Click on each project to see more details and download relevant files!</p>
+        </section>
 
-        <div class="gallery-grid">
-            <div class="gallery-item">
-                <a href="#">
-                    <img src="images/work1-thumb.jpg" alt="Work 1 Thumbnail">
-                    <p>3D Character Design</p>
-                </a>
+        <section class="portfolio-preview">
+            <h2>My Projects</h2>
+
+            <div class="project-item">
+                <h3>Project Title: ZooVRventure – An Immersive Virtual Zoo Experience</h3>
+                <p class="project-description">
+                    A final year project developed in Unity that lets users explore a realistic virtual zoo with 3D animal models and educational content, highlighting skills in VR and interactive design.
+                </p>
+                <div class="project-images">
+                    <img src="images/project1-img1.png" alt="ZooVRventure Screenshot 1">
+                    <img src="images/project1-img2.png" alt="ZooVRventure Screenshot 2">
+                </div>
+                <button class="project-toggle-btn">See More</button>
+                <div class="project-details hidden">
+                    <h4>About This Project:</h4>
+                    <p>ZooVRventure is an innovative virtual reality application designed to provide an accessible and engaging educational experience. Built with Unity, it features meticulously crafted 3D models of various animals in their naturalistic habitats, accompanied by detailed information. Users can navigate freely, observe animal behaviors, and learn about biodiversity. This project involved extensive work in 3D asset creation, environment design, C# scripting for interactive elements, and VR optimization.</p>
+                    <h4>Key Features:</h4>
+                    <ul>
+                        <li>Immersive VR environment.</li>
+                        <li>High-fidelity 3D animal models.</li>
+                        <li>Interactive educational hotspots.</li>
+                        <li>Intuitive navigation for virtual exploration.</li>
+                    </ul>
+                    <h4>Downloadable Files:</h4>
+                    <ul class="download-list">
+                        <li><a href="downloads/ZooVRventure_Report.pdf" target="_blank">Project Report (PDF)</a></li>
+                        <li><a href="downloads/ZooVRventure_Presentation.pdf" target="_blank">Presentation Slides (PDF)</a></li>
+                        <li><a href="downloads/ZooVRventure_Build.zip" target="_blank">Demo Build (ZIP)</a></li>
+                    </ul>
+                </div>
             </div>
 
-            <div class="gallery-item">
-                <a href="#">
-                    <img src="images/work2-thumb.jpg" alt="Work 2 Thumbnail">
-                    <p>Branding & Logo Design</p>
-                </a>
+            <div class="project-item">
+                <h3>Project Title: 3D Character Modeling & Rigging – Mr. Apple</h3>
+                <p class="project-description">
+                    A stylized 3D character project featuring Mr. Apple, created in Blender. This includes modeling, texturing, and full-body rigging for animation. Highlights my skills in character design, rigging, and 3D workflow.
+                </p>
+                <div class="project-images">
+                    <img src="images/project2-img1.png" alt="Mr. Apple Model 1">
+                    <img src="images/project2-img2.png" alt="Mr. Apple Model 2">
+                </div>
+                <button class="project-toggle-btn">See More</button>
+                <div class="project-details hidden">
+                    <h4>About This Project:</h4>
+                    <p>Mr. Apple is a whimsical 3D character brought to life in Blender, showcasing a complete character pipeline from concept to animation readiness. The project focused on creating a visually appealing, low-poly model with efficient topology, followed by detailed texturing. A crucial aspect was developing a robust and intuitive rigging system, including custom controls for facial expressions and body movements, ensuring the character is production-ready for various animated scenarios.</p>
+                    <h4>Key Features:</h4>
+                    <ul>
+                        <li>Stylized 3D character design.</li>
+                        <li>Clean mesh topology and UV unwrapping.</li>
+                        <li>Hand-painted textures for vibrant aesthetics.</li>
+                        <li>Advanced rigging for full character articulation.</li>
+                    </ul>
+                    <h4>Downloadable Files:</h4>
+                    <ul class="download-list">
+                        <li><a href="downloads/MrApple_Model.blend" target="_blank">Blender File (.blend)</a></li>
+                        <li><a href="downloads/MrApple_Textures.zip" target="_blank">Texture Maps (ZIP)</a></li>
+                        <li><a href="downloads/MrApple_Sketch.pdf" target="_blank">Concept Sketch (PDF)</a></li>
+                    </ul>
+                </div>
             </div>
 
-            <div class="gallery-item">
-                <a href="#">
-                    <img src="images/work3-thumb.jpg" alt="Work 3 Thumbnail">
-                    <p>Unity Game Prototype</p>
-                </a>
+            <div class="project-item">
+                <h3>Project Title: Brand Identity for "EcoHarvest Organics"</h3>
+                <p class="project-description">
+                    Comprehensive brand identity development for an organic food company, including logo design, color palette, typography, and marketing collateral. Showcases expertise in graphic design principles.
+                </p>
+                <div class="project-images">
+                    <img src="images/work1-thumb.jpg" alt="EcoHarvest Logo Concept">
+                    <img src="images/work2-thumb.jpg" alt="EcoHarvest Branding Mockup">
+                </div>
+                <button class="project-toggle-btn">See More</button>
+                <div class="project-details hidden">
+                    <h4>About This Project:</h4>
+                    <p>This project involved crafting a complete brand identity for "EcoHarvest Organics," focusing on communicating freshness, natural quality, and trustworthiness. The process included extensive market research, concept sketching, digital refinement of logo options, and developing a versatile brand guideline that covers all visual aspects. The goal was to create a cohesive and memorable brand that resonates with health-conscious consumers.</p>
+                    <h4>Key Deliverables:</h4>
+                    <ul>
+                        <li>Primary and secondary logo variants.</li>
+                        <li>Defined color palette (CMYK, RGB, Hex).</li>
+                        <li>Selected brand typography.</li>
+                        <li>Business card and letterhead designs.</li>
+                        <li>Social media templates.</li>
+                    </ul>
+                    <h4>Downloadable Files:</h4>
+                    <ul class="download-list">
+                        <li><a href="downloads/EcoHarvest_BrandGuide.pdf" target="_blank">Brand Guideline (PDF)</a></li>
+                        <li><a href="downloads/EcoHarvest_Logos.zip" target="_blank">Logo Files (EPS, PNG, JPG)</a></li>
+                    </ul>
+                </div>
             </div>
 
-            <div class="gallery-item">
-                <a href="#">
-                    <img src="images/work4-thumb.jpg" alt="Work 4 Thumbnail">
-                    <p>Digital Illustration Series</p>
-                </a>
+            <div class="project-item">
+                <h3>Project Title: Modern Apartment Interior Visualization</h3>
+                <p class="project-description">
+                    A realistic 3D visualization of a modern apartment interior, showcasing skills in architectural rendering, lighting, and material application using Blender and Cycles.
+                </p>
+                <div class="project-images">
+                    <img src="images/work3-thumb.jpg" alt="Apartment Render 1">
+                    <img src="images/work4-thumb.jpg" alt="Apartment Render 2">
+                </div>
+                <button class="project-toggle-btn">See More</button>
+                <div class="project-details hidden">
+                    <h4>About This Project:</h4>
+                    <p>This project demonstrates my proficiency in creating high-quality architectural visualizations. The focus was on accurately representing a modern apartment's spatial layout, material textures, and lighting conditions. Techniques included precise modeling of furniture and fixtures, realistic material node setups, and advanced lighting strategies to achieve photorealistic renders. The project highlights attention to detail and ability to convey atmosphere through digital means.</p>
+                    <h4>Software Used:</h4>
+                    <ul>
+                        <li>Blender (Modeling, Rendering)</li>
+                        <li>Substance Painter (Texturing)</li>
+                        <li>Adobe Photoshop (Post-processing)</li>
+                    </ul>
+                    <h4>Downloadable Files:</h4>
+                    <ul class="download-list">
+                        <li><a href="downloads/Apartment_Render_Set.zip" target="_blank">High-Res Renders (ZIP)</a></li>
+                        <li><a href="downloads/Apartment_Wireframe.jpg" target="_blank">Wireframe View (JPG)</a></li>
+                    </ul>
+                </div>
             </div>
 
-            <div class="gallery-item">
-                <a href="#">
-                    <img src="images/work5-thumb.jpg" alt="Work 5 Thumbnail">
-                    <p>Architectural Visualization</p>
-                </a>
+            <div class="project-item">
+                <h3>Project Title: Interactive Web Portfolio Concept</h3>
+                <p class="project-description">
+                    A concept and prototype for an interactive web portfolio, utilizing HTML, CSS, and JavaScript to create dynamic elements and a user-friendly experience.
+                </p>
+                <div class="project-images">
+                    <img src="images/work5-thumb.jpg" alt="Web Portfolio Screenshot 1">
+                    <img src="images/work6-thumb.jpg" alt="Web Portfolio Screenshot 2">
+                </div>
+                <button class="project-toggle-btn">See More</button>
+                <div class="project-details hidden">
+                    <h4>About This Project:</h4>
+                    <p>This project explores advanced web development techniques to create a more engaging and interactive user experience for an online portfolio. It features dynamic content loading, smooth transitions, and a responsive design approach. The prototype demonstrates a clean aesthetic combined with functional interactivity, serving as a blueprint for future web-based projects.</p>
+                    <h4>Technologies Used:</h4>
+                    <ul>
+                        <li>HTML5</li>
+                        <li>CSS3 (Flexbox, Grid, Animations)</li>
+                        <li>JavaScript (DOM manipulation, Event Listeners)</li>
+                    </ul>
+                    <h4>Downloadable Files:</h4>
+                    <ul class="download-list">
+                        <li><a href="downloads/WebPortfolio_Code.zip" target="_blank">Source Code (ZIP)</a></li>
+                        <li><a href="downloads/WebPortfolio_Wireframes.pdf" target="_blank">Wireframe Document (PDF)</a></li>
+                    </ul>
+                </div>
             </div>
 
-            <div class="gallery-item">
-                <a href="#">
-                    <img src="images/work6-thumb.jpg" alt="Work 6 Thumbnail">
-                    <p>UI/UX Design Concept</p>
-                </a>
-            </div>
-        </div>
+        </section>
     </main>
 
     <footer>
         <p>© 2025 Mohamad Rafiq Bin Roznan — Personal Portfolio</p>
     </footer>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const toggleButtons = document.querySelectorAll('.project-toggle-btn');
+
+            toggleButtons.forEach(button => {
+                button.addEventListener('click', function() {
+                    const projectDetails = this.nextElementSibling; // The .project-details div
+                    if (projectDetails.classList.contains('hidden')) {
+                        projectDetails.classList.remove('hidden');
+                        this.textContent = 'See Less';
+                    } else {
+                        projectDetails.classList.add('hidden');
+                        this.textContent = 'See More';
+                    }
+                });
+            });
+        });
+    </script>
 
 </body>
 </html>
