--- a/index.html
+++ b/index.html
@@ -27,6 +27,24 @@
             <p>This is where I showcase my creative projects, designs, and development work. Explore my journey and creations below!</p>
         </section>
 
+        <section class="highlight-images-section">
+            <h2>My Latest Visual Highlights</h2>
+            <p class="section-description">Take a quick glance at some of my recent creative endeavors.</p>
+            <div class="highlight-image-grid">
+                <div class="highlight-image-item">
+                    <img src="images/highlight-image-1.jpg" alt="Highlight Image 1">
+                </div>
+                <div class="highlight-image-item">
+                    <img src="images/highlight-image-2.jpg" alt="Highlight Image 2">
+                </div>
+                <div class="highlight-image-item">
+                    <img src="images/highlight-image-3.jpg" alt="Highlight Image 3">
+                </div>
+                <div class="highlight-image-item">
+                    <img src="images/highlight-image-4.jpg" alt="Highlight Image 4">
+                </div>
+            </div>
+        </section>
         <section class="portfolio-preview">
             <h2>Recent Projects</h2>
             
@@ -39,7 +57,7 @@
                     <img src="images/project1-img1.png" alt="Project 1 Screenshot 1">
                     <img src="images/project1-img2.png" alt="Project 1 Screenshot 2">
                 </div>
-                <a href="#" class="project-link btn-blue">View Project Details</a>
+                <a href="my_works.html" class="project-link btn-blue">View Project Details</a>
             </div>
 
             <div class="project-item">
@@ -50,10 +68,10 @@
                     <img src="images/project2-img1.png" alt="Project 2 Design 1">
                     <img src="images/project2-img2.png" alt="Project 2 Design 2">
                 </div>
-                <a href="#" class="project-link btn-blue">View Project Details</a>
+                <a href="my_works.html" class="project-link btn-blue">View Project Details</a>
             </div>
 
-            </section>
+        </section>
     </main>
 
     <footer>
