--- a/my_works.html
+++ b/my_works.html
@@ -89,84 +89,103 @@
             </div>
 
             <div class="project-item">
-                <h3>Project Title: Brand Identity for "EcoHarvest Organics"</h3>
+                <h3>Project Title: Sejahtera Clinic Management System</h3>
                 <p class="project-description">
-                    Comprehensive brand identity development for an organic food company, including logo design, color palette, typography, and marketing collateral. Showcases expertise in graphic design principles.
+                    A comprehensive system developed to streamline clinic operations for clerks, doctors, and pharmacists. It offers various functions including medicine stock updates, patient management, and prescription handling.
                 </p>
                 <div class="project-images">
-                    <img src="images/work1-thumb.jpg" alt="EcoHarvest Logo Concept">
-                    <img src="images/work2-thumb.jpg" alt="EcoHarvest Branding Mockup">
+                    <img src="images/image_fd4dae.png" alt="Sejahtera Clinic Management System Homepage">
+                    <img src="images/project_clinic_login.png" alt="Sejahtera Clinic Management System Login Page">
                 </div>
                 <button class="project-toggle-btn">See More</button>
                 <div class="project-details hidden">
                     <h4>About This Project:</h4>
-                    <p>This project involved crafting a complete brand identity for "EcoHarvest Organics," focusing on communicating freshness, natural quality, and trustworthiness. The process included extensive market research, concept sketching, digital refinement of logo options, and developing a versatile brand guideline that covers all visual aspects. The goal was to create a cohesive and memorable brand that resonates with health-conscious consumers.</p>
-                    <h4>Key Deliverables:</h4>
+                    <p>The Sejahtera Clinic Management System is a robust web-based solution designed to enhance the efficiency of daily clinic operations. It provides distinct modules tailored to the needs of different healthcare professionals within a clinic environment.</p>
+                    <h4>Key Features:</h4>
                     <ul>
-                        <li>Primary and secondary logo variants.</li>
-                        <li>Defined color palette (CMYK, RGB, Hex).</li>
-                        <li>Selected brand typography.</li>
-                        <li>Business card and letterhead designs.</li>
-                        <li>Social media templates.</li>
+                        <li>**Clerk Module:** Manages patient registrations, appointments, and basic patient information.</li>
+                        <li>**Doctor Module:** Handles patient consultation records, diagnoses, and electronic prescription generation.</li>
+                        <li>**Pharmacist Module:** Oversees comprehensive medicine inventory, including stock updates, dispensing, and managing supply levels.</li>
+                        <li>Secure user authentication with role-based access.</li>
+                        <li>Centralized patient records for easy access and updates.</li>
+                        <li>Streamlined workflow for prescription and dispensing processes.</li>
                     </ul>
-                    <h4>Downloadable Files:</h4>
-                    <ul class="download-list">
-                        <li><a href="downloads/EcoHarvest_BrandGuide.pdf" target="_blank">Brand Guideline (PDF)</a></li>
-                        <li><a href="downloads/EcoHarvest_Logos.zip" target="_blank">Logo Files (EPS, PNG, JPG)</a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="project-item">
-                <h3>Project Title: Modern Apartment Interior Visualization</h3>
-                <p class="project-description">
-                    A realistic 3D visualization of a modern apartment interior, showcasing skills in architectural rendering, lighting, and material application using Blender and Cycles.
-                </p>
-                <div class="project-images">
-                    <img src="images/work3-thumb.jpg" alt="Apartment Render 1">
-                    <img src="images/work4-thumb.jpg" alt="Apartment Render 2">
-                </div>
-                <button class="project-toggle-btn">See More</button>
-                <div class="project-details hidden">
-                    <h4>About This Project:</h4>
-                    <p>This project demonstrates my proficiency in creating high-quality architectural visualizations. The focus was on accurately representing a modern apartment's spatial layout, material textures, and lighting conditions. Techniques included precise modeling of furniture and fixtures, realistic material node setups, and advanced lighting strategies to achieve photorealistic renders. The project highlights attention to detail and ability to convey atmosphere through digital means.</p>
-                    <h4>Software Used:</h4>
-                    <ul>
-                        <li>Blender (Modeling, Rendering)</li>
-                        <li>Substance Painter (Texturing)</li>
-                        <li>Adobe Photoshop (Post-processing)</li>
-                    </ul>
-                    <h4>Downloadable Files:</h4>
-                    <ul class="download-list">
-                        <li><a href="downloads/Apartment_Render_Set.zip" target="_blank">High-Res Renders (ZIP)</a></li>
-                        <li><a href="downloads/Apartment_Wireframe.jpg" target="_blank">Wireframe View (JPG)</a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="project-item">
-                <h3>Project Title: Interactive Web Portfolio Concept</h3>
-                <p class="project-description">
-                    A concept and prototype for an interactive web portfolio, utilizing HTML, CSS, and JavaScript to create dynamic elements and a user-friendly experience.
-                </p>
-                <div class="project-images">
-                    <img src="images/work5-thumb.jpg" alt="Web Portfolio Screenshot 1">
-                    <img src="images/work6-thumb.jpg" alt="Web Portfolio Screenshot 2">
-                </div>
-                <button class="project-toggle-btn">See More</button>
-                <div class="project-details hidden">
-                    <h4>About This Project:</h4>
-                    <p>This project explores advanced web development techniques to create a more engaging and interactive user experience for an online portfolio. It features dynamic content loading, smooth transitions, and a responsive design approach. The prototype demonstrates a clean aesthetic combined with functional interactivity, serving as a blueprint for future web-based projects.</p>
                     <h4>Technologies Used:</h4>
                     <ul>
-                        <li>HTML5</li>
-                        <li>CSS3 (Flexbox, Grid, Animations)</li>
-                        <li>JavaScript (DOM manipulation, Event Listeners)</li>
+                        <li>(List specific technologies here, e.g., PHP, MySQL, HTML, CSS, JavaScript, etc. - based on your actual project's tech stack)</li>
                     </ul>
                     <h4>Downloadable Files:</h4>
                     <ul class="download-list">
-                        <li><a href="downloads/WebPortfolio_Code.zip" target="_blank">Source Code (ZIP)</a></li>
-                        <li><a href="downloads/WebPortfolio_Wireframes.pdf" target="_blank">Wireframe Document (PDF)</a></li>
+                        <li><a href="downloads/SejahteraClinic_Report.pdf" target="_blank">Project Report (PDF)</a></li>
+                        <li><a href="downloads/SejahteraClinic_Demo.zip" target="_blank">System Demo (ZIP)</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="project-item">
+                <h3>Project Title: Student Task Management System Interface</h3>
+                <p class="project-description">
+                    An intuitive user interface designed in Figma for a student task management system. It provides features for students to manage tasks and submissions, and for lecturers to create tasks and view student submissions.
+                </p>
+                <div class="project-images">
+                    <img src="images/work3-thumb.png" alt="Student Task Management System Login">
+                    <img src="images/work4-thumb.png" alt="Student Task Management System Dashboard">
+                </div>
+                <button class="project-toggle-btn">See More</button>
+                <div class="project-details hidden">
+                    <h4>About This Project:</h4>
+                    <p>This project focuses on the user experience (UX) and user interface (UI) design of a student task management system. Developed using Figma, the interface aims to simplify academic task organization for students and streamline assignment management for lecturers. The design prioritizes ease of navigation, clear information hierarchy, and visual appeal to enhance productivity for both user groups.</p>
+                    <h4>Key Features:</h4>
+                    <ul>
+                        <li>**Student Features:** Task viewing and tracking, assignment submission, personal dashboard with progress overview.</li>
+                        <li>**Lecturer Features:** Task creation and assignment, student submission viewing, progress monitoring.</li>
+                        <li>User-friendly dashboard for quick overview of tasks and notifications.</li>
+                        <li>Clear visual indicators for task status (e.g., pending, completed, incomplete).</li>
+                        <li>Responsive design for access across various devices.</li>
+                    </ul>
+                    <h4>Software Used:</h4>
+                    <ul>
+                        <li>Figma (UI/UX Design, Prototyping)</li>
+                    </ul>
+                    <h4>Downloadable Files:</h4>
+                    <ul class="download-list">
+                        <li><a href="downloads/STMS_Figma_Design_File.fig" target="_blank">Figma Design File (.fig)</a></li>
+                        <li><a href="downloads/STMS_Wireframes.pdf" target="_blank">Wireframes (PDF)</a></li>
+                        <li><a href="downloads/STMS_UserFlows.pdf" target="_blank">User Flows (PDF)</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="project-item">
+                <h3>Project Title: Valorant Tournament Streaming Interface (E-Saf x UniSZA Esports Club)</h3>
+                <p class="project-description">
+                    A collaborative project with UniSZA Esports Club to design a full streaming interface for a Valorant tournament as part of the UniSZA "E-Saf" event, including in-game, waiting lobby, and caster interfaces.
+                </p>
+                <div class="project-images">
+                    <img src="images/work5-thumb.png" alt="Valorant In-Game Interface">
+                    <img src="images/work6-thumb.png" alt="Valorant Caster Interface">
+                </div>
+                <button class="project-toggle-btn">See More</button>
+                <div class="project-details hidden">
+                    <h4>About This Project:</h4>
+                    <p>This project involved designing a comprehensive set of streaming overlays and interfaces specifically tailored for a Valorant esports tournament. The collaboration with UniSZA Esports Club aimed to create a professional and engaging broadcast experience for the E-Saf event. The design encompassed various scenes necessary for a live stream, ensuring a consistent visual identity and seamless presentation throughout the tournament.</p>
+                    <h4>Key Interface Components:</h4>
+                    <ul>
+                        <li>**In-Game Interface:** Custom overlays for live match broadcasts, displaying scores, team names, player statistics, and match information.</li>
+                        <li>**Waiting Lobby Interface:** Visually appealing screens for pre-match, inter-round, and post-match breaks, often including sponsor logos, upcoming matches, and team lineups.</li>
+                        <li>**Caster Interface:** Dedicated layouts for commentators, allowing them to be prominently featured alongside game footage or analysis, often with their names and titles displayed.</li>
+                        <li>Consistent branding elements (logos, color schemes, typography) integrated across all interfaces.</li>
+                        <li>Dynamic elements designed for easy updates of scores, player names, and other real-time data.</li>
+                    </ul>
+                    <h4>Software Used:</h4>
+                    <ul>
+                        <li>(Specify design software used, e.g., Adobe Photoshop, Adobe Illustrator, Figma, OBS Studio for integration concepts)</li>
+                    </ul>
+                    <h4>Downloadable Files:</h4>
+                    <ul class="download-list">
+                        <li><a href="downloads/ValorantStream_DesignFiles.zip" target="_blank">Design Files (ZIP)</a></li>
+                        <li><a href="downloads/ValorantStream_StyleGuide.pdf" target="_blank">Style Guide (PDF)</a></li>
+                        <li><a href="downloads/ValorantStream_Mockups.zip" target="_blank">Mockup Renders (ZIP)</a></li>
                     </ul>
                 </div>
             </div>
